--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
             <a href="#bebidas">Bebidas</a>
             <a href="#postres">Postres</a>
         </div>
+        <div class="menu-mobile" id="menu-mobile">
+            <div class="container_menu">
+                <img class="img-menu" src="recursos/menu-svgrepo-com.svg" alt="">
+            </div>
+        </div>
     </nav>
-    <main>
+    <div class="menu-link-mobile" id="menu-link-mobile">
+        <a href="#platillo">Platillos</a>
+        <a href="#bebidas">Bebidas</a>
+        <a href="#postres">Postres</a>
+    </div>
+    <main id="main">
         <h1 id="platillo" class="titulo">Platillos</h1>
         <section id="platillos" class="comida">
         <div class="alimento">
@@ -155,8 +165,7 @@
             </div>
         </section>
         
-
-
     </main>
+    <script src="scrip.js" ></script>
 </body>
 </html>
