--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
         </section>
         
     </main>
+    <footer>
+        Trabajo realizado por Jael Bezares
+        <a class="contacto" href="https://github.com/JaelBezares03">Github</a>
+        <a class="contacto" href="https://www.linkedin.com/in/jael-bezares-garc%C3%ADa-0510b02b2/">Linkedin</a>
+    </footer>
     <script src="scrip.js" ></script>
 </body>
 </html>
